<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/loginLinear">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginTxtAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="130dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="40sp" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/loginImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="-50dp"
            android:layout_marginTop="-200dp"
            android:src="@drawable/airbus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frameLayout" />
        <LinearLayout
            android:id="@+id/loginLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="36dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_hint"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/text_border"
                >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEditTMail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/text_border"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEditTPassword"
                    android:inputType="numberPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/loginCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/login_remember_me"
                android:textSize="16sp"
                android:lineHeight="24dp"
                android:textColor="@color/light_dark"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login_sign_in"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/button_color"
                />
        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>