<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/app_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/loginLinear">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detailTxtAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="34dp"
                android:layout_marginRight="141dp"
                android:layout_marginBottom="218dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                tools:text="@string/detail_title"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="24sp" />
           <androidx.appcompat.widget.AppCompatImageView
               android:id="@+id/detailBack"
               android:layout_width="16dp"
               android:layout_height="16dp"
               android:src="@drawable/ic_close"
               android:layout_marginTop="30dp"
               android:layout_marginEnd="24dp"
               android:layout_marginStart="340dp"
               />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/loginImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="-50dp"
            android:layout_marginTop="-200dp"
            android:src="@drawable/airbus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frameLayout" />

       <androidx.core.widget.NestedScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <com.google.android.material.card.MaterialCardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:backgroundTint="@color/cardview_bg"
               android:layout_marginStart="15dp"
               android:layout_marginEnd="15dp">
               <androidx.appcompat.widget.LinearLayoutCompat
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
                   <androidx.appcompat.widget.LinearLayoutCompat
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">
                       <androidx.appcompat.widget.LinearLayoutCompat
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_marginTop="40dp"
                           android:layout_marginStart="32dp"
                           android:layout_marginBottom="40dp">
                           <androidx.appcompat.widget.AppCompatTextView
                               android:id="@+id/detailDepartureShort"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               tools:text="@string/detail_icao_short"
                               android:textSize="40sp"
                               android:fontFamily="@font/roboto"
                               android:textFontWeight="700"
                               android:lineHeight="47sp"
                               android:textColor="@color/white"/>
                           <androidx.appcompat.widget.AppCompatTextView
                               android:id="@+id/detailDepature"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               tools:text="@string/detail_icao"
                               android:textSize="14sp"
                               android:fontFamily="@font/roboto"
                               android:textFontWeight="700"
                               android:lineHeight="17sp"
                               android:textColor="@color/second_title_bg"/>
                           <androidx.appcompat.widget.AppCompatTextView
                               android:id="@+id/detailDepatureDate"
                               android:layout_width="82dp"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="24dp"
                               tools:text="@string/detail_icao_date"
                               android:textSize="16sp"
                               android:fontFamily="@font/roboto"
                               android:textFontWeight="400"
                               android:lineHeight="24sp"
                               android:textColor="@color/white"/>

                       </androidx.appcompat.widget.LinearLayoutCompat>

                       <androidx.appcompat.widget.AppCompatImageView
                           android:layout_width="90dp"
                           android:layout_height="22dp"
                           android:layout_marginTop="53dp"
                           android:layout_marginStart="24dp"
                           android:layout_marginEnd="24dp"
                           android:src="@drawable/ic_group"/>
                       <androidx.appcompat.widget.LinearLayoutCompat
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_marginTop="40dp"
                           android:layout_marginStart="0dp"
                           android:layout_marginEnd="32dp"
                           android:layout_marginBottom="40dp">
                           <androidx.appcompat.widget.AppCompatTextView
                               android:id="@+id/detailArrivalShort"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               tools:text="@string/detail_estimated_short"
                               android:textSize="40sp"
                               android:fontFamily="@font/roboto"
                               android:textFontWeight="700"
                               android:lineHeight="47sp"
                               android:textColor="@color/white"/>
                           <androidx.appcompat.widget.AppCompatTextView
                               android:id="@+id/detailArrival"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               tools:text="@string/detail_estimated"
                               android:textSize="14sp"
                               android:fontFamily="@font/roboto"
                               android:textFontWeight="700"
                               android:lineHeight="17sp"
                               android:textColor="@color/second_title_bg"/>
                           <androidx.appcompat.widget.AppCompatTextView
                               android:id="@+id/detailArrivalDate"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="24dp"
                               tools:text="@string/detail_estimated_date"
                               android:textSize="16sp"
                               android:fontFamily="@font/roboto"
                               android:textFontWeight="400"
                               android:lineHeight="24sp"
                               android:textColor="@color/white"/>

                       </androidx.appcompat.widget.LinearLayoutCompat>
                   </androidx.appcompat.widget.LinearLayoutCompat>
                   <androidx.appcompat.widget.LinearLayoutCompat
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:backgroundTint="@color/white"
                       android:paddingTop="40dp"
                       android:paddingStart="32dp"
                       android:background="@color/white">
                       <androidx.appcompat.widget.AppCompatTextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/flight_name"
                           android:textColor="@color/black"
                           />
                       <androidx.appcompat.widget.AppCompatTextView
                           android:id="@+id/detailFlight"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="35dp"
                           tools:text="PX100"
                           android:textColor="@color/bottom_title_bg"
                           />
                       <androidx.appcompat.widget.AppCompatTextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="100dp"
                           android:text="@string/flight_gate"
                           android:textColor="@color/black"
                           />
                       <androidx.appcompat.widget.AppCompatTextView
                           android:id="@+id/detailGate"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="10dp"
                           tools:text="14F"
                           android:textColor="@color/bottom_title_bg"
                           />
                   </androidx.appcompat.widget.LinearLayoutCompat>
                   <androidx.appcompat.widget.LinearLayoutCompat
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:backgroundTint="@color/white"
                       android:paddingTop="32dp"
                       android:paddingStart="32dp"
                       android:paddingBottom="40dp"
                       android:background="@color/white">
                       <androidx.appcompat.widget.AppCompatTextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/flight_terminal"
                           android:textColor="@color/black"
                           />
                       <androidx.appcompat.widget.AppCompatTextView
                           android:id="@+id/detailTerminal"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="14dp"
                           tools:text="D"
                           android:textColor="@color/bottom_title_bg"
                           />
                       <androidx.appcompat.widget.AppCompatTextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="130dp"
                           android:text="@string/flight_delay"
                           android:textColor="@color/black"
                           />
                       <androidx.appcompat.widget.AppCompatTextView
                           android:id="@+id/detailDelay"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="10dp"
                           android:layout_marginEnd="28dp"
                           tools:text="24A"
                           android:textColor="@color/bottom_title_bg"
                           />

                   </androidx.appcompat.widget.LinearLayoutCompat>
               </androidx.appcompat.widget.LinearLayoutCompat>
           </com.google.android.material.card.MaterialCardView>

       </androidx.core.widget.NestedScrollView>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>