<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="22dp"
                android:paddingStart="16dp">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_airport"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:lineHeight="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/title_color"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/itemTextAirport"
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:lineHeight="17sp"
                    android:textColor="@color/title_color"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:paddingStart="16dp">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_icao"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:lineHeight="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/title_color"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/itemTextIcao"
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:lineHeight="17sp"
                    android:textColor="@color/title_color"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="30dp"
                android:paddingStart="16dp">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_estimated"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:lineHeight="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/title_color"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/itemTextEstimated"
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:lineHeight="17sp"
                    android:textColor="@color/title_color"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                android:background="@color/bottom_section"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/itemStatus"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginEnd="13dp"
                    android:background="@drawable/status_green"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/ic_time"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itemDelay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:textSize="10sp"
                    android:textFontWeight="500"
                    android:lineHeight="12sp"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_arrow"
                    android:layout_marginStart="260dp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>



    </com.google.android.material.card.MaterialCardView>

</LinearLayout>